fix validator, vars, dao methods , exceptions